--- a/app/src/main/res/layout/fragment_nearby_places.xml
+++ b/app/src/main/res/layout/fragment_nearby_places.xml
@@ -5,10 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:layout_marginEnd="@dimen/_8sdp"
-        android:layout_marginBottom="@dimen/_24sdp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         tools:context=".feature.nearbyplaces.NearbyPlacesFragment">
 
         <androidx.recyclerview.widget.RecyclerView
