--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -11,8 +11,9 @@
         <ImageView
             android:id="@+id/icon"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_120sdp"
+            android:layout_height="150dp"
             android:scaleType="fitXY"
+            android:contentDescription="@string/banner_of_location"
             android:src="@mipmap/ic_launcher"
             android:text="@string/hello_blank_fragment"
             app:layout_constraintTop_toTopOf="parent" />
@@ -21,8 +22,8 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,11 +36,11 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingStart="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_8sdp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/title"
             tools:text="tehran" />
 
@@ -49,10 +50,10 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingStart="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_8sdp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="@id/address"
             app:layout_constraintTop_toBottomOf="@+id/address"
             tools:text="10" />
